tests/paczka1/small_fuzzy/11776676.err
Error in line 8: pacfm S573 26,9
Error in line 4: 8iwg3 S843 23,4
